# ai_git_commit_gui

./: .gitignore  README.md  RELEASE_CHECKLIST.md  ai_interface.py  config.py  create_release.md  gui_main.py  publish.sh  pyproject.toml  quick_publish.sh  test.py
