[project]
name = "git-ai-commit"
version = "0.1.0"
description = "Git AI Commit - 智能提交助手"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.9.1",
    "requests>=2.32.3"
]

[project.scripts]
git-ai-commit = "gui_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
